# autocrop

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  lib.rs  main.rs  texture.rs
src/ui/: croptype.rs  filename.rs  leniency.rs  mod.rs  previewer.rs
