[package]
name = "autocrop"
version = "0.2.0"
authors = ["Spiky Pillow"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Gives us egui, epi and web+native backends
# I'm using a version with my own addition, this will probably bite me later
eframe = { version = "0.13.1", git = "https://github.com/SpikyPillow/egui", features = ["persistence"] }

serde = { version = "1.0", features = ["derive"] }

native-dialog = "0.5.5" # native-dialog for folder opening / notifications
image = "0.23.14" # image manupulation

[features]
default = []
# http = ["eframe/http"] # Enable if you want to do http requests
persistance = ["eframe/persistence"] # Enable if you want to persist app state on shutdown
# serde = []

# image crate is slow
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.deflate]
opt-level = 3

[profile.release]
#opt-level = 2 # fast and small wasm
opt-level = 3
